--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -105,4 +105,4 @@ float: right;
 /*#ExerciseEditor {float:right;}
 #Activity {float:right;}*/
 #RightColumn {float:right;}
-
+#Bottom {clear: both;}
